Bug 56637 - -[SynchronousLoader connection:didReceiveAuthenticationChallenge:] is leaky
Summary: -[SynchronousLoader connection:didReceiveAuthenticationChallenge:] is leaky
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: 528+ (Nightly build)
Hardware: Other OS X 10.5
: P2 Normal
Assignee: Adam Roben (:aroben)
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-03-18 02:31 PDT by Adam Roben (:aroben)
Modified: 2011-03-18 11:31 PDT (History)
3 users (show)

See Also:


Attachments
Patch (2.01 KB, patch)
2011-03-18 02:33 PDT, Adam Roben (:aroben)
sullivan: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Adam Roben (:aroben) 2011-03-18 02:31:06 PDT
-[SynchronousLoader connection:didReceiveAuthenticationChallenge:] is leaky
Comment 1 Adam Roben (:aroben) 2011-03-18 02:33:21 PDT
Created attachment 86151 [details]
Patch
Comment 2 Adam Roben (:aroben) 2011-03-18 09:51:34 PDT
Committed r81481: <http://trac.webkit.org/changeset/81481>
Comment 3 WebKit Review Bot 2011-03-18 11:31:10 PDT
http://trac.webkit.org/changeset/81481 might have broken GTK Linux 32-bit Release
The following tests are not passing:
fast/reflections/inline-crash.html