Fix a NSURLCredential leak seen on the leaks bot

Fixes <http://webkit.org/b/56637> -[SynchronousLoader
connection:didReceiveAuthenticationChallenge:] is leaky

Reviewed by John Sullivan.

* DumpRenderTree/mac/LayoutTestControllerMac.mm:
(-[SynchronousLoader connection:didReceiveAuthenticationChallenge:]): Use a RetainPtr to
cause the NSURLCredential to be released.

Canonical link: https://commits.webkit.org/71341@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@81481 268f45cc-cd09-0410-ab3c-d52691b4dbfc